samples/syntaxError/bad.c
int main()
{
#ifndef A
}
#endif
